Always use submodule's develop branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "mission-control-2020-frontend"]
 	path = mission-control-2020-frontend
 	url = https://github.com/Hyp-ed/mission-control-2020-frontend
+	branch = develop
