Fit everything into single page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,11 @@
     "react-chartjs-2": "^2.9.0",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.12.0",
-    "react-liquid-gauge": "^1.2.4",
-    "react-router-dom": "^5.1.2",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.3.0",
-    "react-tooltip": "^4.1.2",
     "react-scroll": "^1.7.16",
     "react-textfit": "^1.1.0",
+    "react-tooltip": "^4.1.2",
     "simplebar-react": "^2.1.0",
     "socket.io-client": "^2.3.0",
     "stompjs": "^2.3.3"
