--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-tooltip": "^4.1.2",
     "simplebar-react": "^2.1.0",
     "socket.io-client": "^2.3.0",
+    "status-indicator": "^1.0.9",
     "stompjs": "^2.3.3"
   },
   "scripts": {
