Upgrade packages and fix warnings

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ frontend/node_modules
 frontend/build
 frontend/build_packageYarnApp
 frontend/.gradle
+frontend/.eslintcache
 hyped-pod_code
 
 **/.DS_Store
