--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@types/stompjs": "^2.3.4",
     "chart.js": "^2.9.3",
     "chartjs-plugin-streaming": "^1.8.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.19",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.9.0",
@@ -27,6 +26,22 @@
     "socket.io-client": "^2.3.0",
     "status-indicator": "^1.0.9",
     "stompjs": "^2.3.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.3.3",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
