--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,17 +22,21 @@
     "react-scroll": "^1.7.16",
     "react-textfit": "^1.1.0",
     "react-tooltip": "^4.1.2",
+    "simplebar": "^5.3.6",
     "simplebar-react": "^2.1.0",
     "socket.io-client": "^2.3.0",
     "status-indicator": "^1.0.9",
     "stompjs": "^2.3.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.0",
+    "@types/react": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.3.3",
     "eslint-plugin-jsx-a11y": "^6.3.1",
