--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,8 +14,9 @@
     "outDir": "build",
     "target": "es5",
     "module": "esnext",
+    "moduleResolution": "node",
 
-    "checkJs": true,
+    "checkJs": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
